--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -11,8 +11,7 @@
     <%= theme.name %></option>
   <% end %>
   </select>
-
-  <%= link_to "New Theme", new_theme_url %>
+  <%= link_to "New Theme", new_theme_url, class: "button small-button" %>
   <br>
 
   <h3>Players:</h3><br>
