--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -3,16 +3,15 @@
 
 
 Photo Bingo is a bit of a mix between Apples to Apples,
-and casual social games like Words with Friends. A player selects (or makes) a theme,
-which contains a bunch of related phrases. For example, the “Cars” theme may contain many different makes
-and models of cars. He and his invited friends are each given a 4x4 grid,
-populated with randomly selected and ordered cars. <br><br>
+and casual social games like Words with Friends. You select (or make) a theme,
+which contains a bunch of related phrases. For example, the “Cats” theme may contain 
+many different poses a cat may be in. You and your invited friends are each given a 4x4 grid,
+populated with randomly selected and ordered phrases. <br><br>
 
-They race to take pictures
-of the corresponding cars, and upload them to the database. A picture must be
-“approved” by the other players, to verify that it is, indeed, a picture of a
-(for example) Lamborghini, rather than one of a Ford. This is done by vote.
-When a player gets 4 approved pictures in a row, column, or diagonal, he is
+You race to take pictures of the corresponding cars, and upload them to the database. 
+Your pictures must be “approved” by your friends, to verify that it is, indeed, a picture of a
+(for example) cat, rather than one of a dog. This is done by vote.
+When you get 4 approved pictures in a row, column, or diagonal, you are
 declared the winner, and all boards become available to all players for perusal. <br><br>
 
 Click "Games" at the top to begin!
