--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -7,7 +7,7 @@
       <%= theme.name %>
       <ul class="group">
         <li><%= link_to "Edit", edit_theme_url(theme), class: "button small-button" %></li>
-        <li><%= button_to "Delete", theme_url(theme), method: "delete", class: "button small-button",
+        <li><%= link_to "Delete", theme_url(theme), method: :delete, class: "button small-button",
           data: { confirm: "Are you sure you wish to discard this theme?\nThis is permanent!" } %></li>
       </ul>
     </li>
