--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,8 +17,8 @@
   <% my_board = current_user.boards.find_by_game_id(@game.id) %>
 
   <div class="buttons">
-    <%= link_to "My Board", board_url(my_board), method: :get, class: "button" %><br>
-    <%= link_to "Quit Game", board_url(my_board), method: :delete, class: "button",
+    <%= link_to "My Board", board_url(my_board), class: "button" %><br>
+    <%= button_to "Quit Game", board_url(my_board), method: :delete, class: "button",
        data: { confirm: "Are you sure you wish to quit?\nThis is permanent!"}%>
   </div>
 
