--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,7 +80,7 @@ nav input, nav button, nav .button {
   postion: block;
 }
 
-.button {
+.button, input[type="submit"].button {
   background-color: rgb(251,247,6);
   padding: 10px;
   border: 1px solid black;
@@ -88,9 +88,10 @@ nav input, nav button, nav .button {
   border-radius: 5px;
   font-size: 12pt;
   display: inline-block;
+  color: rgb(230,54,6);
 }
 
-.button:hover {
+.button:hover, input[type="submit"].button:hover {
   transition: all 0.5s;
   color: rgb(253,156,19);
   background-color: white;
@@ -101,7 +102,7 @@ nav input, nav button, nav .button {
   color: rgb(70, 130, 250);
 }
 
-.button:active {
+.button:active, input[type="submit"].button:active {
   box-shadow: inset 0px 2px 10px black;
 }
 
