Adds link to source on front page

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -2,13 +2,20 @@
 <h2>Logged in as: <%= current_user.name %></h2>
 
 
+This is a technical demo.
+The source code can be found
+<a class="button small-button" href="https://github.com/slepkin/PhotoBingo">
+  here.
+</a>
+<br><br>
+
 Photo Bingo is a bit of a mix between Apples to Apples,
 and casual social games like Words with Friends. You select (or make) a theme,
-which contains a bunch of related phrases. For example, the “Cats” theme may contain 
+which contains a bunch of related phrases. For example, the “Cats” theme may contain
 many different poses a cat may be in. You and your invited friends are each given a 4x4 grid,
 populated with randomly selected and ordered phrases. <br><br>
 
-You race to take pictures of the corresponding cars, and upload them to the database. 
+You race to take pictures of the corresponding cars, and upload them to the database.
 Your pictures must be “approved” by your friends, to verify that it is, indeed, a picture of a
 (for example) cat, rather than one of a dog. This is done by vote.
 When you get 4 approved pictures in a row, column, or diagonal, you are
